[Update] update normal flow of carousel and dynamically calculate height to fix overflow issues with page container

--- a/src/styles/_theme.css
+++ b/src/styles/_theme.css
@@ -33,6 +33,7 @@
     --rounded-3xl: 20px;
 
     /* Element Widths */
+    --carousel-max-width-mobile: 359px;
     --carousel-max-width: 470px;
 }
 
